[gd_scene load_steps=5 format=2]

[ext_resource path="res://Textures/foundation.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Foundation.gd" type="Script" id=2]
[ext_resource path="res://Textures/circle_area.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="Foundation" type="Area2D" groups=["foundation_area"]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 2.5, 2.5 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AggroDisplay" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.184314 )
scale = Vector2( 2.5, 2.5 )
z_index = 10
z_as_relative = false
texture = ExtResource( 3 )

[connection signal="input_event" from="." to="." method="_on_Foundation_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Foundation_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Foundation_mouse_exited"]
